--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SustainLab</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="resources.html">Resources</a>
+  <a href="tools.html">Tools</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<section class="container">
+  <h1>SustainLab</h1>
+  <p>
+    Hi, I’m Siv, an electrical engineering student interested in sustainability and climate-focused technology.
+    SustainLab is a personal project that provides simple, practical energy and sustainability resources
+    for students and communities—without technical jargon.
+  </p>
+
+  <p>
+    This site focuses on understanding electricity use, reducing energy costs, and learning the basics
+    of sustainable energy systems.
+  </p>
+</section>
+
+</body>
+</html>
 
